# click-demo

./: pyproject.toml
main_cli/: main.py
