[tool.poetry]
name = "click-demo"
version = "0.1.0"
description = "click demo"
authors = ["Ashutosh Bhardwaj <ashutoshbh@gmail.com>"]
readme = "README.md"
packages = [{include = "main_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.2"
click = "^8.1.3"
tabulate = "^0.9.0"

[tool.poetry.scripts]
test_cli = "main_cli.main:main_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
